--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,26 +1,3 @@
-Skip to content
-Search or jump to…
-
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@joner125 
-Learn Git and GitHub without any code!
-Using the Hello World guide, you’ll start a branch, write comments, and open a pull request.
-
-
-128k
-28
-5431.4kpages-themes/cayman
- Code Issues 2 Pull requests 0 Actions Security Insights
-cayman/_layouts/default.html
-@iBug iBug Allow per-page title and description with Front Matter
-7269e05 on Feb 9
-@benbalter@sjparkinson@ignatk@iBug@sethjackson@braek@jasonlong
-48 lines (43 sloc)  2.08 KB
-  
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
@@ -49,7 +26,7 @@ cayman/_layouts/default.html
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+        <a href="{{ site.github.repository_url }}" class="btn">Upload a LukeALike</a>
       {% endif %}
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
@@ -69,15 +46,3 @@ cayman/_layouts/default.html
     </main>
   </body>
 </html>
-© 2019 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Help
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
