--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,10 @@
   <body>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">Welcome to LukeALike</h1>
+      <h1 class="project-name">Luke-alike</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">Upload a LukeALike</a>
+        <a href="{{ site.github.repository_url }}" class="btn">Upload a Luke-alike</a>
       {% endif %}
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
