--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
       {% include image-gallery.html folder="/Images" %}
-      {% include carousel.html height="50" unit="%" duration="7" %}
+      {% include carousel.html height="50" unit="%" duration="7" folder"/Images" %}
       <footer class="site-footer">
           <span class="site-footer-owner">Luke-alike is maintained by Secret Santa and was built for Dave.</span>
       </footer>
