--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,8 @@
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">Upload a Luke-alike</a>
       {% endif %}
-      <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-      <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+      <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css"/>
+      <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css"/>
     </header>
 
     <main id="content" class="main-content" role="main">
@@ -39,7 +39,7 @@
       </div>
       <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
       <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-      <script type="text/javascript" src="slick/slick.min.js"></script>
+      <script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script>
       <script src="script.js"></script>
       <footer class="site-footer">
           <span class="site-footer-owner">Luke-alike is maintained by Secret Santa and was built for Dave.</span>
