--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
       <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
       <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
       <script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script>
-      <script src="includes/script.js"></script>
+      <script src="script.js"></script>
       <footer class="site-footer">
           <span class="site-footer-owner">Luke-alike is maintained by Secret Santa and was built for Dave.</span>
       </footer>
