--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,23 +33,21 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
 			<h2>Fade</h2>
-			<div class="slider fade">
-				<div>
+			<div class="slider fade slick-initialized slick-slider slick-dotted" role="toolbar"><button type="button" data-role="none" class="slick-prev slick-arrow" aria-label="Previous" role="button" style="display: block;">Previous</button>
+				<div aria-live="polite" class="slick-list draggable"><div class="slick-track" style="opacity: 1; width: 1680px;" role="listbox"><div class="slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" style="width: 560px; position: relative; left: 0px; top: 0px; z-index: 999; opacity: 1;" tabindex="-1" role="option" aria-describedby="slick-slide90">
 					<div class="image">
-						<img src="https://joner125.github.io/LukeALike/uploads/slider/image1.jpg" />
+						<img src="https://joner125.github.io/LukeALike/uploads/slider/image1.jpg">
 					</div>
-				</div>
-				<div>
+				</div><div class="slick-slide" data-slick-index="1" aria-hidden="true" style="width: 560px; position: relative; left: -560px; top: 0px; z-index: 998; opacity: 0;" tabindex="-1" role="option" aria-describedby="slick-slide91">
 					<div class="image">
-						<img src="https://joner125.github.io/LukeALike/uploads/slider/image2.jpg" />
+						<img src="https://joner125.github.io/LukeALike/uploads/slider/image2.jpg">
 					</div>
-				</div>
-				<div>
+				</div><div class="slick-slide" data-slick-index="2" aria-hidden="true" style="width: 560px; position: relative; left: -1120px; top: 0px; z-index: 998; opacity: 0;" tabindex="-1" role="option" aria-describedby="slick-slide92">
 					<div class="image">
-						<img src="https://joner125.github.io/LukeALike/uploads/slider/image3.jpg" />
+						<img src="https://joner125.github.io/LukeALike/uploads/slider/image3.jpg">
 					</div>
-				</div>
-			</div>
+				</div></div></div>						
+			<button type="button" data-role="none" class="slick-next slick-arrow" aria-label="Next" role="button" style="display: block;">Next</button><ul class="slick-dots" style="display: block;" role="tablist"><li class="slick-active" aria-hidden="false" role="presentation" aria-selected="true" aria-controls="navigation90" id="slick-slide90"><button type="button" data-role="none" role="button" tabindex="0">1</button></li><li aria-hidden="true" role="presentation" aria-selected="false" aria-controls="navigation91" id="slick-slide91"><button type="button" data-role="none" role="button" tabindex="0">2</button></li><li aria-hidden="true" role="presentation" aria-selected="false" aria-controls="navigation92" id="slick-slide92"><button type="button" data-role="none" role="button" tabindex="0">3</button></li></ul></div>
       <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
       <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
       <script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script>
