--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,23 +33,20 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
 			<h2>Fade</h2>
-			<div class="slider fade">
-				<div>
-					<div class="image">
-						<img src="https://joner125.github.io/LukeALike/uploads/slider/image1.jpg" />
-					</div>
-				</div>
-				<div>
-					<div class="image">
-						<img src="https://joner125.github.io/LukeALike/uploads/slider/image2.jpg" />
-					</div>
-				</div>
-				<div>
+      <div class="slider responsive">
+              <div class="image">
+                <img src="https://joner125.github.io/LukeALike/uploads/slider/image1.jpg" />
+          </div>
+              <div class="image">
+                <img src="https://joner125.github.io/LukeALike/uploads/slider/image1.jpg" />
+              </div>
+              <div class="image">
+                <img src="https://joner125.github.io/LukeALike/uploads/slider/image2.jpg" />
+              </div>
 					<div class="image">
 						<img src="https://joner125.github.io/LukeALike/uploads/slider/image3.jpg" />
 					</div>
 				</div>
-			</div>
       <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
       <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
       <script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script>
