--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,32 +26,9 @@
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">Upload a Luke-alike</a>
       {% endif %}
-      <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css"/>
-      <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css"/>
     </header>
-      <div class="slider responsive slick-initialized slick-slider slick-dotted" role="toolbar"><button type="button" data-role="none" class="slick-prev slick-arrow slick-disabled" aria-label="Previous" role="button" aria-disabled="true" style="display: block;">Previous</button>
-				<div aria-live="polite" class="slick-list draggable"><div class="slick-track" style="opacity: 1; width: 1120px; transform: translate3d(0px, 0px, 0px);" role="listbox"><div class="slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" style="width: 140px;" tabindex="-1" role="option" aria-describedby="slick-slide50">
-					<h3>1</h3>
-				</div><div class="slick-slide slick-active" data-slick-index="1" aria-hidden="false" style="width: 140px;" tabindex="-1" role="option" aria-describedby="slick-slide51">
-					<h3>2</h3>
-				</div><div class="slick-slide slick-active" data-slick-index="2" aria-hidden="false" style="width: 140px;" tabindex="-1" role="option" aria-describedby="slick-slide52">
-					<h3>3</h3>
-				</div><div class="slick-slide slick-active" data-slick-index="3" aria-hidden="false" style="width: 140px;" tabindex="-1" role="option" aria-describedby="slick-slide53">
-					<h3>4</h3>
-				</div><div class="slick-slide" data-slick-index="4" aria-hidden="true" style="width: 140px;" tabindex="-1" role="option" aria-describedby="slick-slide54">
-					<h3>5</h3>
-				</div><div class="slick-slide" data-slick-index="5" aria-hidden="true" style="width: 140px;" tabindex="-1" role="option" aria-describedby="slick-slide55">
-					<h3>6</h3>
-				</div><div class="slick-slide" data-slick-index="6" aria-hidden="true" style="width: 140px;" tabindex="-1" role="option" aria-describedby="slick-slide56">
-					<h3>7</h3>
-				</div><div class="slick-slide" data-slick-index="7" aria-hidden="true" style="width: 140px;" tabindex="-1" role="option" aria-describedby="slick-slide57">
-					<h3>8</h3>
-				</div></div></div>
-			<button type="button" data-role="none" class="slick-next slick-arrow" aria-label="Next" role="button" style="display: block;" aria-disabled="false">Next</button><ul class="slick-dots" style="display: block;" role="tablist"><li class="slick-active" aria-hidden="false" role="presentation" aria-selected="true" aria-controls="navigation50" id="slick-slide50"><button type="button" data-role="none" role="button" tabindex="0">1</button></li><li aria-hidden="true" role="presentation" aria-selected="false" aria-controls="navigation51" id="slick-slide51" class=""><button type="button" data-role="none" role="button" tabindex="0">2</button></li></ul></div>
-      <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-      <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-      <script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script>
-      <script src="script.js"></script>
+    <main id="content" class="main-content" role="main">
+      {{ content }}
       <footer class="site-footer">
           <span class="site-footer-owner">Luke-alike is maintained by Secret Santa and was built for Dave.</span>
       </footer>
