--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
       <h1 class="project-name">Luke-alike</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
+      <input type="file"/>
         <a href="{{ site.github.repository_url }}" class="btn">Upload a Luke-alike</a>
       {% endif %}
     </header>
