--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,12 @@
       <h1 class="project-name">Luke-alike</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
+      <form method="POST">
       <div class="upload-btn-wrapper">
       <button class="btn">Upload a Luke-alike</button>
       <input type="file" name="mylukealike" />
       </div>
+      </form>
       {% endif %}
     </header>
     <main id="content" class="main-content" role="main">
