--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
       <div class="upload-btn-wrapper">
       <button class="btn">Upload a Luke-alike</button>
       <input type="file" name="mylukealike" />
+      <input type="submit" value="Upload File" class="btn" />
       </div>
       </form>
       {% endif %}
