--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,12 +25,12 @@
       <h1 class="project-name">Luke-alike</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
-      <form method="POST"nenctype="multipart/form-data" action="uploader.php">
+      <form method="POST"nenctype="multipart/form-data" action="uploadfile.php">
       <div class="upload-btn-wrapper">
-      <button class="btn">Upload a Luke-alike</button>
+      <button class="btn">Choose Image</button>
       <input type="file" name="mylukealike" />
-      <input type="submit" value="Upload File" class="btn" />
       </div>
+      <input type="submit" value='Upload Luke-alike'/>
       </form>
       {% endif %}
     </header>
